{
    "name": "CharacterController",
    "maps": [
        {
            "name": "Moves",
            "id": "b286a7af-3655-419a-a5de-64603b5e6285",
            "actions": [
                {
                    "name": "Moviniento",
                    "type": "Value",
                    "id": "58a5227e-3595-48df-af3c-acac6548b20d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interactuar",
                    "type": "Button",
                    "id": "869add85-1ed4-406e-97e2-b388166c5e4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbrirManu",
                    "type": "Button",
                    "id": "46c909cb-9279-4571-8226-676952bf49f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CerrarJuego",
                    "type": "Button",
                    "id": "81de8f26-23dd-4e95-8e2d-2217f9ff30c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Teclas AWSD",
                    "id": "777ac9f3-07c2-4a19-bcb1-baee7c749e26",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moviniento",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0888c561-5f7f-4da6-9b29-73a21c44a57a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado",
                    "action": "Moviniento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f5e5b014-1779-40d6-8e79-7f5ebf721f73",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado",
                    "action": "Moviniento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "676c9a17-07c3-490b-abc7-6d7b6db74e35",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado",
                    "action": "Moviniento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d0faeb59-4c82-4721-9077-bbb829cc5fcc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado",
                    "action": "Moviniento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "804fe6dc-745f-4451-9a0a-91309b3c914f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moviniento",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "26bb166f-e480-4f07-ae13-2fcfae40e0b6",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mando",
                    "action": "Moviniento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "dbe706fa-5c44-46a8-8712-834692d052a8",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mando",
                    "action": "Moviniento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "308f7cbd-35e3-4e31-bd28-1af3af1a068b",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mando",
                    "action": "Moviniento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "21ac66d3-f8d2-4fe9-9ad0-1a95f9ea2cfa",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mando",
                    "action": "Moviniento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Flechas teclado",
                    "id": "2572426e-d55b-4c53-a2fb-cf37c0a81952",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moviniento",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a512bbf9-5621-4e0a-814d-cae224bd64e9",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado",
                    "action": "Moviniento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9919c1d2-297c-4dda-a616-b8c354969cbf",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado",
                    "action": "Moviniento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3bcadbf3-f360-4464-8c75-75c810e3ed55",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado",
                    "action": "Moviniento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "64389c76-d879-4e24-9401-173b1d7af08c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado",
                    "action": "Moviniento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5b75a15f-fe54-4979-9efe-5751b42e9f6e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado",
                    "action": "Interactuar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c57cae01-935c-490e-b147-1db2ab55a186",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mando",
                    "action": "Interactuar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c771bbd4-1aee-453c-8489-7643c0ceafe3",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado",
                    "action": "AbrirManu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f27f260-4473-4720-a1e3-f32b2a91bcad",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mando",
                    "action": "AbrirManu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "095ea90c-ab04-4beb-a3c4-67b4b89be15c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CerrarJuego",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Teclado",
            "bindingGroup": "Teclado",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mando",
            "bindingGroup": "Mando",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}